appId: com.aelzohry.MaestroDemo
---
- launchApp:
    arguments:
      - 'bool-arg true'
      - "string-arg 'Ahmed'"

- scrollUntilVisible:
    element:
      text: 'Hello, world!'
- assertVisible:
    id: 'globe_image'
- tapOn:
    id: 'info_button'
- assertVisible: 'About'
- assertVisible:
    id: 'author_name_label'
    text: 'Ahmed Elzohry'
- assertVisible:
    id: 'author_email_label'
    text: 'aelzohry2010@gmail.com'
- tapOn: Done
- assertNotVisible: Done
